--- a/food_delivery_graphDB/FeatureEngineering.ipynb
+++ b/food_delivery_graphDB/FeatureEngineering.ipynb
@@ -392,7 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#slightly modified shortest path query from example\n",
+    "#slightly modified shortest path query\n",
     "def my_neo4j_shortest_path(from_station, to_station):\n",
     "    \"given a from station and to station, run and print the shortest path\"\n",
     "    \n",
@@ -607,7 +607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Box code from class\n",
+    "#Geodesic Box code\n",
     "def my_calculate_box(point, miles):\n",
     "    \"Given a point and miles, calculate the box in form left, right, top, bottom\"\n",
     "    \n",
@@ -1764,7 +1764,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Adapted query from example\n",
     "def next_step(from_station, to_station):\n",
     "    \"given a from station and to station, run and print the shortest path\"\n",
     "    \n",
