--- a/buffrag/rag_demo.ipynb
+++ b/buffrag/rag_demo.ipynb
@@ -6,27 +6,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 0: Check and install required packages\n",
-    "import sys\n",
-    "import subprocess\n",
+    "# Cell 1: Install required packages and check installation\n",
+    "%%capture\n",
+    "!pip install -r requirements-txt.txt\n",
     "\n",
-    "def install_package(package):\n",
-    "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package])\n",
+    "import importlib\n",
     "\n",
-    "required_packages = [\n",
-    "    'langchain', 'langchain_openai', 'PyPDF2', 'langchain_community',\n",
-    "    'openai', 'python-dotenv', 'qdrant-client', 'google-search-results',\n",
-    "    'ipywidgets', 'spacy', 'nltk'\n",
-    "]\n",
-    "\n",
-    "for package in required_packages:\n",
+    "def check_package(package):\n",
     "    try:\n",
-    "        __import__(package)\n",
+    "        importlib.import_module(package)\n",
+    "        print(f\"{package} is installed.\")\n",
+    "        return True\n",
     "    except ImportError:\n",
-    "        print(f\"{package} not found. Installing...\")\n",
-    "        install_package(package)\n",
+    "        print(f\"{package} is NOT installed.\")\n",
+    "        return False\n",
     "\n",
-    "print(\"All required packages are installed.\")"
+    "# Read packages from requirements-txt.txt\n",
+    "with open('requirements-txt.txt', 'r') as f:\n",
+    "    required_packages = [line.strip() for line in f if line.strip() and not line.startswith('#')]\n",
+    "\n",
+    "all_installed = all(check_package(package) for package in required_packages)\n",
+    "\n",
+    "if all_installed:\n",
+    "    print(\"\\nAll required packages are installed.\")\n",
+    "else:\n",
+    "    print(\"\\nSome packages are missing. Please check the output above and try reinstalling.\")\n"
    ]
   },
   {
